# notifications_sprint_1

./: README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: event_pull_request.yaml  event_push.yaml
mock_auth/: Dockerfile  main.py  requirements.txt
nginx/: nginx.conf  site.conf
postgres/: .env.example  Dockerfile  example_roles
rabbit_mq/: docker-compose.yaml  example_start_command
redis/: redis.conf
scheme/: architecture_rabbit_mq.puml  as_is.puml  maybe.puml  to_be.puml
src/: email_formatter.Dockerfile  email_sender.Dockerfile  group_handler.Dockerfile  notifier_api.Dockerfile
src/alembic_migrations/: env.py  example_alembic_command  script.py.mako
src/config/: fast_api_logging.py  logging_settings.py  settings.py
src/db/: db_init.py
src/db/message_brokers/: abstract_classes.py  rabbit_message_broker.py
src/db/models/: __init__.py  email_group_notifications.py  email_single_notifications.py  email_templates.py  group_emails.py  single_emails.py
src/db/storage/: abstract_classes.py  orm_factory.py
src/email_formatter/: callback.py  main.py
src/email_formatter/models/: all_data.py  base_orjson.py  data_from_db.py  data_from_queue.py  http_responses.py  log.py  (+1 more)
src/email_sender/: callback.py  main.py
src/group_handler/: callback.py  mail.py  main.py
src/notifier_api/: main.py
src/security/: abstract_classes.py  env_config.py  example_vault_keys  exceptions_handler.py  vault_app_config.py  vault_client.py
src/utils/: aiohttp_session.py  async_backoff.py  backoff.py  custom_exceptions.py  custom_exceptions_handlers.py  custom_fastapi_router.py  dependencies.py  log.py  request_logging_data.py  startup_shutdown.py  tracer.py  validation_exception_data.py
tests/: .env_tests.example
tests/functional/: conftest.py  settings.py
vault/: .env_vault.example  Dockerfile  example_vault_init  vault-config.hcl
(+39 files in other folders)
