[tool.poetry]
name = "notifications_sprint_1"
version = "0.1.0"
description = ""
authors = ["Vlada Sabelnikova <vladasabelnikova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
orjson = "^3.7.2"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"
opentelemetry-api = "^1.11.1"
opentelemetry-sdk = "^1.11.1"
opentelemetry-instrumentation-fastapi = "0.30b1"
opentelemetry-exporter-jaeger = "^1.11.1"
pytest = "7.1.2"
pytest-asyncio = "0.18.3"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.950"
wemake-python-styleguide = "^0.16.1"
types-requests = "^2.27.29"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
